--- a/src/main/resources/Simulator.fxml
+++ b/src/main/resources/Simulator.fxml
@@ -1,30 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<SplitPane dividerPositions="0.6733668341708543" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-           minWidth="-Infinity" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0"
-           xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.SimulatorGUI">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
+<SplitPane dividerPositions="0.7218" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.SimulatorGUI">
    <padding>
-      <Insets top="1.0"/>
+      <Insets top="1.0" />
    </padding>
-   <Canvas fx:id="customerDisplay" height="285.0" width="600.0"/>
+   <Canvas fx:id="customerCanvas" height="285.0" width="600.0" />
    <HBox prefHeight="225.0" prefWidth="598.0">
-      <Button fx:id="startButton" contentDisplay="CENTER" mnemonicParsing="false" text="Start"
-              textAlignment="CENTER">
+      <Button fx:id="startButton" contentDisplay="CENTER" mnemonicParsing="false" text="Start" textAlignment="CENTER">
          <HBox.margin>
-            <Insets left="25.0" top="39.0"/>
+            <Insets left="25.0" top="39.0" />
          </HBox.margin>
          <font>
-            <Font name="SansSerif Regular" size="17.0"/>
+            <Font name="SansSerif Regular" size="17.0" />
          </font>
          <tooltip>
             <Tooltip text="Start the simulation">
                <font>
-                  <Font name="SansSerif Regular" size="12.0"/>
+                  <Font name="SansSerif Regular" size="12.0" />
                </font>
             </Tooltip>
          </tooltip>
@@ -32,30 +35,30 @@
       <VBox prefHeight="200.0" prefWidth="100.0">
          <Button fx:id="speedUpButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Speed up">
             <VBox.margin>
-               <Insets left="22.0" top="20.0"/>
+               <Insets left="22.0" top="20.0" />
             </VBox.margin>
             <font>
-               <Font name="SansSerif Regular" size="12.0"/>
+               <Font name="SansSerif Regular" size="12.0" />
             </font>
             <tooltip>
                <Tooltip text="Speed up the simulation">
                   <font>
-                     <Font name="SansSerif Regular" size="12.0"/>
+                     <Font name="SansSerif Regular" size="12.0" />
                   </font>
                </Tooltip>
             </tooltip>
          </Button>
          <Button fx:id="slowDownButton" mnemonicParsing="false" text="Slow down">
             <VBox.margin>
-               <Insets left="20.0" top="16.0"/>
+               <Insets left="20.0" top="16.0" />
             </VBox.margin>
             <font>
-               <Font name="SansSerif Regular" size="12.0"/>
+               <Font name="SansSerif Regular" size="12.0" />
             </font>
             <tooltip>
                <Tooltip text="Slow down the simulation">
                   <font>
-                     <Font name="SansSerif Regular" size="12.0"/>
+                     <Font name="SansSerif Regular" size="12.0" />
                   </font>
                </Tooltip>
             </tooltip>
@@ -65,23 +68,23 @@
          <HBox prefHeight="100.0" prefWidth="200.0">
             <Label alignment="CENTER" contentDisplay="CENTER" text="Simulation time" textAlignment="CENTER">
                <HBox.margin>
-                  <Insets left="10.0" top="20.0"/>
+                  <Insets left="10.0" top="20.0" />
                </HBox.margin>
                <font>
-                  <Font name="SansSerif Regular" size="15.0"/>
+                  <Font name="SansSerif Regular" size="15.0" />
                </font>
             </Label>
             <TextField fx:id="time" prefHeight="25.0" prefWidth="80.0">
                <HBox.margin>
-                  <Insets left="7.0" top="18.0"/>
+                  <Insets left="7.0" top="18.0" />
                </HBox.margin>
                <font>
-                  <Font name="SansSerif Regular" size="12.0"/>
+                  <Font name="SansSerif Regular" size="12.0" />
                </font>
                <tooltip>
                   <Tooltip text="How long the simulation should run for">
                      <font>
-                        <Font name="SansSerif Regular" size="12.0"/>
+                        <Font name="SansSerif Regular" size="12.0" />
                      </font>
                   </Tooltip>
                </tooltip>
@@ -90,23 +93,23 @@
          <HBox prefHeight="100.0" prefWidth="200.0">
             <Label alignment="CENTER" contentDisplay="CENTER" text="Delay" textAlignment="CENTER">
                <HBox.margin>
-                  <Insets left="39.0" top="9.0"/>
+                  <Insets left="39.0" top="9.0" />
                </HBox.margin>
                <font>
-                  <Font name="SansSerif Regular" size="15.0"/>
+                  <Font name="SansSerif Regular" size="15.0" />
                </font>
             </Label>
             <TextField fx:id="delay" prefHeight="25.0" prefWidth="80.0">
                <HBox.margin>
-                  <Insets left="41.0" top="5.0"/>
+                  <Insets left="41.0" top="5.0" />
                </HBox.margin>
                <font>
-                  <Font name="SansSerif Regular" size="12.0"/>
+                  <Font name="SansSerif Regular" size="12.0" />
                </font>
                <tooltip>
                   <Tooltip text="Delay between actions">
                      <font>
-                        <Font name="SansSerif Regular" size="12.0"/>
+                        <Font name="SansSerif Regular" size="12.0" />
                      </font>
                   </Tooltip>
                </tooltip>
@@ -117,23 +120,23 @@
          <HBox prefHeight="100.0" prefWidth="200.0">
             <Label text="Total time:">
                <HBox.margin>
-                  <Insets left="8.0" top="20.0"/>
+                  <Insets left="8.0" top="20.0" />
                </HBox.margin>
                <font>
-                  <Font name="SansSerif Regular" size="15.0"/>
+                  <Font name="SansSerif Regular" size="15.0" />
                </font>
             </Label>
             <Label fx:id="result" text="temp">
                <HBox.margin>
-                  <Insets left="3.0" top="20.0"/>
+                  <Insets left="3.0" top="20.0" />
                </HBox.margin>
                <font>
-                  <Font name="SansSerif Regular" size="15.0"/>
+                  <Font name="SansSerif Regular" size="15.0" />
                </font>
                <tooltip>
                   <Tooltip text="How long the simulator ran">
                      <font>
-                        <Font name="SansSerif Regular" size="12.0"/>
+                        <Font name="SansSerif Regular" size="12.0" />
                      </font>
                   </Tooltip>
                </tooltip>
@@ -142,23 +145,23 @@
          <HBox prefHeight="100.0" prefWidth="200.0">
             <Label text="Customer count:">
                <HBox.margin>
-                  <Insets left="8.0" top="10.0"/>
+                  <Insets left="8.0" top="10.0" />
                </HBox.margin>
                <font>
-                  <Font name="SansSerif Regular" size="15.0"/>
+                  <Font name="SansSerif Regular" size="15.0" />
                </font>
             </Label>
             <Label fx:id="customerCount" text="temp">
                <HBox.margin>
-                  <Insets left="3.0" top="10.0"/>
+                  <Insets left="3.0" top="10.0" />
                </HBox.margin>
                <font>
-                  <Font name="SansSerif Regular" size="15.0"/>
+                  <Font name="SansSerif Regular" size="15.0" />
                </font>
                <tooltip>
                   <Tooltip text="How many customers were served">
                      <font>
-                        <Font name="SansSerif Regular" size="12.0"/>
+                        <Font name="SansSerif Regular" size="12.0" />
                      </font>
                   </Tooltip>
                </tooltip>
